--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
 }
 
 
 .App-header {
-  min-height: 100vh;
+  margin-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
