--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -7,6 +7,11 @@
     padding-inline-start: 0;
     flex-wrap: wrap;
     row-gap: 1rem;
+    margin: 1.5rem;
+}
+
+.skills__title {
+    padding-right: 1rem;
 }
 
 .skills__div {
