--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -1,6 +1,6 @@
 .title__name, .title__dev {
     background-color: black;
-    width: 30vw;
+    width: 50vw;
     padding: 0.5rem;
     transform: skewX(-15deg);
 }
@@ -8,9 +8,17 @@
 .title__name > h1 {
     font-size: 2rem;
     transform: skewX(15deg);
+
 }
+
 
 .title__dev > h2 {
     font-size: 1.5rem;
     transform: skewX(15deg);
+}
+
+@media (max-width: 1100px) {
+    .title__name, .title__dev {
+        width: 80vw;
+    }
 }
