--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,3 @@
-.App {
-  text-align: center;
-  overflow-x: hidden;
-}
-
-
-.App-header {
-  margin-top: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-
 *{
   margin: 0px;
   padding: 0px;
@@ -23,6 +6,30 @@
 body{
   font-family: 'Exo', sans-serif;
 }
+
+.App {
+  text-align: center;
+  overflow-x: hidden;
+}
+
+.App-header {
+  margin-top: 3vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+nav {
+  position: absolute;
+  bottom: 5vh;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
 
 .area{
   background: #4e54c8;  
