--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -7,17 +7,21 @@
 
 .menu-button__div {
     height: 7vh;
+    max-width: 1200px;
     width: 50vw;
+}
+
+.menu-button__div:hover {
+    filter: invert(1);
+    z-index: 1000;
 }
 
 .menu-button__div-img {
     height: 100%;
     width: 100%;
-}
-
-.menu-button__div-img {
     position: relative;
 }
+
 
 .menu-button__div-img > img{
     width: 100%;
