added images for the projects component

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -30,3 +30,13 @@
         width: 90vw;
     }
 }
+
+@media (max-width: 900px) {
+    .about__div {
+        flex-direction: column;
+    }
+
+    .about__div > p {
+        width: 90vw;
+    }
+}
