--- a/src/styles/swipermain.css
+++ b/src/styles/swipermain.css
@@ -1,8 +1,3 @@
-img {
-    object-fit: cover;
-    height: 100%;
-}
-
 .swiper {
     width: 90%;
     height: 40vh;
@@ -11,7 +6,8 @@ img {
 
 .swiper-slide {
     height: 20vw;
-
+    border-radius: 10px;
+    width: 60vw;
 }
 
 .swiper img {
