--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -12,6 +12,9 @@
 
 .skills__title {
     padding-right: 1rem;
+    color: white;
+    font-weight: 800;
+    font-size: calc(16px + 2vw);
 }
 
 .skills__div {
@@ -39,6 +42,3 @@
     object-fit: contain;
     object-position: center;
 }
-
-
-
