--- a/src/styles/title.css
+++ b/src/styles/title.css
@@ -1,14 +1,17 @@
 .title__name, .title__dev {
     background-color: black;
     width: 50vw;
+    height: 5vh;
     padding: 0.5rem;
     transform: skewX(-15deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .title__name > h1 {
     font-size: 2rem;
     transform: skewX(15deg);
-
 }
 
 
